# SentimentDisaster

./: .env.example  .gitignore  README.md  apitest.py  confusion_matrix.py  confusion_matrix_plot.py  geocode.py  kepler.py  matrix.py  pyproject.toml  relevantnews_llm.py  relevantnews_llm_saved.py  requirements.txt  sentiment.py  svm_sentiment_model.pkl  tfidf_vectorizer.pkl
final_data/: filtered_processed_Klungkung_Badai_CNN.csv  filtered_processed_Klungkung_Badai_Detik.csv  filtered_processed_Klungkung_Badai_Mongabay.csv  filtered_processed_Klungkung_Erupsi_Detik.csv  filtered_processed_Klungkung_Gempa_Detik.csv  filtered_processed_Klungkung_Gempa_Mongabay.csv  filtered_processed_Klungkung_Longsor_Detik.csv  filtered_processed_Klungkung_Longsor_Mongabay.csv  filtered_processed_Tabanan_Badai_CNN.csv  filtered_processed_cnn_tabanan_gempa_valid.csv  filtered_processed_detik_bangli_gempa_valid.csv
geojson/: final_disaster_map.geojson  unified_disaster_map.geojson  unified_map.geojson
pipelines/: label_dataset.py  preprocess_merge.py  train_model.py
random_forest/: label_with_llm.py  preprocess_and_label.py  preprocess_merge.py  train_and_evaluate_rf.py
ric/: filtered_processed_Klungkung_Banjir_CNN.csv  filtered_processed_Klungkung_Erupsi_CNN.csv  filtered_processed_Tabanan_Badai_Detik.csv  filtered_processed_Tabanan_Banjir_Detik.csv  filtered_processed_Tabanan_Longsor_CNN.csv  processed_cnn_bangli_banjir_valid.csv  processed_cnn_bangli_gempa_valid.csv  processed_cnn_bangli_longsor_valid.csv  processed_detik_bangli_banjir_valid.csv  (+2 more)
svm/: confusion_matrix_plot.py  (+2 more)
(+12 files in other folders)
